--- a/appsettings.json
+++ b/appsettings.json
@@ -8,11 +8,16 @@
   },
   
   "ConnectionStrings": {
-    "DefaultConnection": 
+    
   },
   
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
 
-
+  "Authentication": {
+    "Authority": "https://login.microsoftonline.com/ff69d2ac-34f5-440f-9177-78a2ab56197f",
+    "ClientId": "fff02538-ed0e-40a7-9bb8-3c6aae2a97ef",
+    "AppIdUri": "api://fff02538-ed0e-40a7-9bb8-3c6aae2a97ef"
+  }
+  
 }
 
